--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <hr>
         <h1>List of books</h1><hr>
         <div>
-            <div class="row" id="books">
-            </div>
+            <div class="row" id="books"></div>
         </div>
     </div>
     
